<?xml version="1.0"?>
<package format="2">
  <name>gl_depth_sim</name>
  <version>0.0.1</version>
  <description>The gl_depth_sim package</description>

  <maintainer email="Jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>
