<?xml version="1.0"?>
<package format="2">
  <name>gl_depth_sim</name>
  <version>0.0.1</version>
  <description>The gl_depth_sim package</description>

  <maintainer email="Jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <!--Used for examples and interfacing-->
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_ros</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <!-- system dependency -->
  <build_depend>libglfw3-dev</build_depend>
  <depend>assimp</depend>
  <depend>libopencv-dev</depend>

  <export>
    <gl_depth_sim plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
