<?xml version="1.0"?>
<package format="2">
  <name>roscpp_gl_depth_sim_demos</name>
  <version>0.0.1</version>
  <description>The roscpp_gl_depth_sim_demos package</description>

  <maintainer email="Jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <depend>gl_depth_sim</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>


</package>
